fix height on smaller devices

--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -1,7 +1,7 @@
 .Main {
   max-width: 800px;
   margin: 0 auto;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   background-color: #fff;
